Further improve API, build basic Angular file browser
